[project]
name = "langgraph-reflection"
version = "0.1.0"
description = "LangGraph with Reflection Node Demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.2.0",
    "langgraph>=0.0.1",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
