[project]
name = "langgraph-reflection-agent"
version = "0.1.0"
description = "A LangGraph agent that drafts, critiques, and rewrites answers with reflection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.1",
    "langchain-openai>=0.0.1",
    "openai>=1.0.0",
    "typing-extensions>=4.7.0",
]

[project.scripts]
langgraph-reflection = "cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
